--- a/index.html
+++ b/index.html
@@ -6,35 +6,10 @@
     <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
   </head>
   <body>
-    <form action="https://send.pageclip.co/YvPfUOdcmHHCMo3SPfaS6svn4Jz9CSTo/OH_Sheet" className="pageclip-form" method="post">
-
-  <!-- text field -->
-  <input type="email" name="email" value="bob@omg.com"/>
-
-  <select name="heardFrom">
-    <option value="ph" selected>Product Hunt</option>
-    <option value="hn">Hacker News</option>
-  </select>
-
-  <!-- radio buttons -->
-  <input type="radio" name="animal" value="tarantula" id="tarantula" checked/>
-  <label htmlFor="tarantula">Tarantula</label>
-
-  <input type="radio" name="animal" value="turtle" id="turtle"/>
-  <label htmlFor="turtle">Turtle</label>
-
-  <!-- checkboxes -->
-  <input type="checkbox" name="likes[pizza]" id="pizza" checked/>
-  <label htmlFor="pizza">Pizza 🍕</label>
-
-  <input type="checkbox" name="likes[yams]" id="yams"/>
-  <label htmlFor="yams">Sweet Potatos 🍠</label>
-
-  <!-- hidden inputs -->
-  <input type="hidden" name="version" value="v1" />
-  <button class="pageclip-form__submit" type="button">
-    <span>Submit</span>
-  </button>
+    <form method="post" action="https://send.pageclip.co/api_lWtWgQqGV6t3Le55HLe853ZiMSO8TCBc">
+  <input type="text" name="name" value="Billy Jean"/>
+  <input type="text" name="email" value="billy@example.com"/>
+  <input type="submit" value="Send">
 </form>
 
     <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
