--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>OH Form</title>
     <link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
-    <link rel="stylesheet" href="C:\Users\J_Dun\Documents\GitHub\johndunaske.github.io\main.css">
+    <link rel="stylesheet" href=".\main.css">
   </head>
   <body>
     <div class="">
