--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <form method="post" action="https://send.pageclip.co/YvPfUOdcmHHCMo3SPfaS6svn4Jz9CSTo/OH_Sheet">
         <label for="name">Full Name:</label>
         <input type="text" name="name" id="name" value=""/>
-        <label for="issue">Current Issue:</label>
+        <label for="issue">Current Issue: (Minimum 20 Characters)</label>
         <input type="text" name="issue" id="issue" value=""/>
         <label for="topic">Topic:</label>
         <select id="topic" name="topic">
