--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <label for="name">Full Name:</label>
         <input type="text" name="name" id="name" value=""/>
         <label for="issue">Current Issue: (Minimum 20 Characters)</label>
+        <label for="issue" id="char">Character Count: 0</label>
         <input type="text" name="issue" id="issue" value=""/>
         <label for="topic">Topic:</label>
         <select id="topic" name="topic">
@@ -23,6 +24,12 @@
           <option value="Other">Other</option>
         </select>
         <input type="submit" value="Send">
+
+        <script type="text/javascript">
+          document.getElementById('issue').onkeyup = function() {
+            document.getElementById('char').innerHTML = "Character Count: " + document.getElementById('issue').value.length
+          }
+        </script>
       </form>
     </div>
 
