Add ubit for things

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
           <option value="Previous Lecture Question">Previous Lecture Question</option>
           <option value="Other">Other</option>
         </select>
+        <label for="ubit" id="ubitLabel">UBIT:</label>
+        <input type="text" name="ubit" id="ubit" value=""/>
         <input type="submit" value="Send">
 
         <script type="text/javascript">
