not person number

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <option value="Previous Lecture Question">Previous Lecture Question</option>
           <option value="Other">Other</option>
         </select>
-        <label for="ubit" id="ubitLabel">UBIT:</label>
+        <label for="ubit" id="ubitLabel">UBIT: (NOT your person number)</label>
         <input type="text" name="ubit" id="ubit" value=""/>
         <input type="submit" value="Send">
 
