--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-    <title>Bonus Points Babyyyy</title>
+    <title>John Dunaske</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
-<body onload="welcomeAlert();" onclick="cursor()">
+<body>
   <div class="container"></div>
   <div class="image"></div>
   <div class="header">John Dunaske</div>
