I hope this works

--- a/index.html
+++ b/index.html
@@ -1,24 +1,1 @@
-<html>
-<head>
-    <title>John Dunaske</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <div class="container"></div>
-  <div class="image"></div>
-  <div class="header">John Dunaske</div>
-  <div class="subheader">Backend Developer</div>
-  <div class="bodytext"><br>Computer Science Teaching Assistant<br>
-    FIRST Robotics Alumni (FRC)<br>
-    SUNY University At Buffalo 2022 Graduate<br><br>
-    Fluent in: Python, Scala, JavaScript, and Java<br><br>
-    Email: johnduna@buffalo.edu</div>
-  <div class="linked" onclick="openLink()"></div>
-  <div class="github"></div>
-  <div class="resume"></div>
-
-  <script src="functions.js"></script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.330a262e.js"></script><link href="/static/css/main.0f121d92.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
