--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.330a262e.js"></script><link href="/static/css/main.0f121d92.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+
+<html>
+    <header>
+        <title>Cryingg</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mali">
+    </header>
+
+    <body>
+        <p class="answer">
+            No!
+        </p>
+        <p class="subtext">
+            finally holy FUCK
+        </p>
+    </body>
+</html>
